@@ -113,7 +113,7 @@ void EditorService::loadMindMapData(QString fileName)
 
     m_fileName = fileName;
     setIsModified(false);
-    RecentFilesManager::instance().addRecentFile(fileName);
+    SIC::instance().recentFilesManager()->addRecentFile(fileName);
 
     m_undoStack->clear();
 }
@@ -224,7 +224,7 @@ bool EditorService::saveMindMapAs(QString fileName, bool async)
     if (m_alzFileIO->toFile(m_mindMapData, fileName, async)) {
         m_fileName = fileName;
         setIsModified(false);
-        RecentFilesManager::instance().addRecentFile(fileName);
+        SIC::instance().recentFilesManager()->addRecentFile(fileName);
         return true;
     }
 
